[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/ComicNeue-Angular/ComicNeueAngular-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui/pause_menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 67
font_data = ExtResource( 1 )

[node name="pause_menu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 0.231373 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
custom_constants/margin_top = 540

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_top = 540.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
margin_bottom = 540.0
size_flags_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 704.0
margin_right = 1215.0
margin_bottom = 540.0
size_flags_horizontal = 4

[node name="continue" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 511.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 1 )
text = "CONTINUE"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 511.0
margin_bottom = 160.0
custom_constants/margin_top = 50

[node name="quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 164.0
margin_right = 511.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 1 )
text = "QUIT"

[node name="Control2" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 1219.0
margin_right = 1219.0
margin_bottom = 540.0
size_flags_horizontal = 2

[node name="sure_popup" type="PopupDialog" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -140.0
margin_right = 312.0
margin_bottom = 140.0

[node name="Panel" type="Panel" parent="sure_popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -140.0
margin_right = 312.0
margin_bottom = 140.0

[node name="VBoxContainer" type="VBoxContainer" parent="sure_popup/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -219.5
margin_right = 219.5
margin_bottom = 186.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="sure_popup/Panel/VBoxContainer"]
margin_right = 439.0
margin_bottom = 46.0
custom_constants/margin_bottom = 46

[node name="sure_label" type="Label" parent="sure_popup/Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 50.0
margin_right = 439.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 2 )
text = "Are you sure?"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="sure_popup/Panel/VBoxContainer"]
margin_top = 122.0
margin_right = 439.0
margin_bottom = 139.0
custom_constants/margin_bottom = 17

[node name="HBoxContainer" type="HBoxContainer" parent="sure_popup/Panel/VBoxContainer"]
margin_top = 143.0
margin_right = 439.0
margin_bottom = 217.0

[node name="yes_sure" type="Button" parent="sure_popup/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 40.0
margin_right = 157.0
margin_bottom = 74.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "yes"

[node name="MarginContainer" type="MarginContainer" parent="sure_popup/Panel/VBoxContainer/HBoxContainer"]
margin_left = 201.0
margin_right = 237.0
margin_bottom = 74.0
custom_constants/margin_right = 36

[node name="no_sure" type="Button" parent="sure_popup/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 296.0
margin_right = 384.0
margin_bottom = 74.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "no"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="sure_popup/Panel/VBoxContainer/HBoxContainer/yes_sure" to="." method="_on_yes_sure_pressed"]
[connection signal="pressed" from="sure_popup/Panel/VBoxContainer/HBoxContainer/no_sure" to="." method="_on_no_sure_pressed"]
